plugins {
    id 'java'
    id 'maven-publish'
    //Gradle 9
    id "com.gradleup.shadow" version "9.3.1"
}

group = 'top.mc_plfd_host'
version = '1.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven {
        name = "papermc"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
    implementation 'net.kyori:adventure-api:4.17.0'
    implementation 'net.kyori:adventure-text-minimessage:4.17.0'
    implementation 'net.kyori:adventure-platform-bukkit:4.3.4'
}

def targetJavaVersion = 17
java {
    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    sourceCompatibility = javaVersion
    targetCompatibility = javaVersion
    if (JavaVersion.current() < javaVersion) {
        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    }
}

tasks.withType(JavaCompile).configureEach {
    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        options.release.set(targetJavaVersion)
    }
    options.encoding = 'UTF-8'
}

processResources {
    def props = [project: [version: version]]
    inputs.properties props
    filteringCharset = 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

jar {
    manifest {
        attributes(
                'Implementation-Title': 'EzObserver',
                'Implementation-Version': version
        )
    }
}

shadowJar {
    archiveClassifier.set('')
    relocate 'net.kyori', 'top.mc_plfd_host.ezobserver.libs.kyori'
    minimize()
}

build.dependsOn shadowJar
